--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ author:
   location         : "Location"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  googlescholar    : "https://scholar.google.com/citations?user=3_EzzEoAAAAJ&hl=en&oi=ao"
+  email            : "arnabsarker00@gmail.com/arnabs@tezu.ernet.in"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  LinkedIn         : "https://www.linkedin.com/in/arnab-sarker-a4086b224/"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
