--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  LinkedIn         : "https://www.linkedin.com/in/arnab-sarker-a4086b224/"
+  LinkedIn         : "https://www.linkedin.com/in/arnab-sarker-a4086b224"
   orcid            : "https://orcid.org/0000-0002-5211-0338"
   pinterest        :
   soundcloud       :
@@ -115,6 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  InspireHep       : "https://inspirehep.net/literature?sort=mostrecent&size=25&page=1&q=arnab%20sarker&ui-citation-summary=true"
 
 
 # Reading Files
