--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Projects"
     url: /teaching/   
   
-  - title: "Talks"
+  - title: "Conferences"
     url: /talks/
     
   - title: "Portfolio"
